<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.android.example.drawhubmobile.viewmodels.auth.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".uicontrollers.auth.LoginFragment">

        <RelativeLayout
            android:id="@id/logoImageLayout"
            android:layout_width="300sp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/movableRoot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/emitter_left"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/logoImage" />

            <View
                android:id="@+id/emitter_right"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/logoImage" />

            <View
                android:id="@+id/emitter_top"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_alignTop="@id/logoImage"
                android:layout_centerHorizontal="true" />

            <View
                android:id="@+id/emitter_bottom"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/logoImage"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/logoImageDescription"
                app:srcCompat="@drawable/ic_drawhub_logo" />
        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movableRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageLayout">

            <TextView
                android:id="@+id/loginErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/invalidLoginErrorLabel"
                android:textColor="@color/colorTextError"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/usernameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/FormEditTextLayout"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/usernameLabel"
                app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginErrorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameText"
                    style="@style/FormEditText"
                    android:text="@={loginViewModel.username}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/FormEditTextLayout"
                android:hint="@string/passwordLabel"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    style="@style/FormEditText"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                style="@style/ActionButton.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/loginBtnLabel"
                app:layout_constraintBottom_toTopOf="@+id/forgotPasswordText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/forgotPasswordLabel"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/newUserText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/newUserText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/newUserLabel"
                android:textColor="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUpText"
                app:layout_constraintHorizontal_bias="0.5" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/signUpLabel"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>