<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.android.example.drawhubmobile.uicontrollers.auth.LoginFragment"
        android:label="LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left" />
        <action
            android:id="@+id/action_loginFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.android.example.drawhubmobile.uicontrollers.auth.SignUpFragment"
        android:label="SignUpFragment" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.android.example.drawhubmobile.uicontrollers.main.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
</navigation>